; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_sched_prim.c_clear_wait.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_sched_prim.c_clear_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @clear_wait(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = call i32 (...) @splsched()
  store i32 %7, i32* %6, align 4
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @thread_lock(i32 %8)
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @clear_wait_internal(i32 %10, i32 %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @thread_unlock(i32 %13)
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @splx(i32 %15)
  %17 = load i32, i32* %5, align 4
  ret i32 %17
}

declare dso_local i32 @splsched(...) #1

declare dso_local i32 @thread_lock(i32) #1

declare dso_local i32 @clear_wait_internal(i32, i32) #1

declare dso_local i32 @thread_unlock(i32) #1

declare dso_local i32 @splx(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
